[gd_scene load_steps=11 format=2]

[ext_resource path="res://nodes/flowers/Flower.gd" type="Script" id=1]
[ext_resource path="res://nodes/flowers/Leaves.gd" type="Script" id=2]
[ext_resource path="res://resources/sprites/placeholders/leaf.png" type="Texture" id=3]
[ext_resource path="res://resources/sprites/placeholders/stem.png" type="Texture" id=4]
[ext_resource path="res://resources/sprites/placeholders/flowerHead.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 54.1404
height = 257.469

[sub_resource type="CircleShape2D" id=2]
radius = 375.794

[sub_resource type="CapsuleShape2D" id=3]
radius = 54.1404
height = 329.362

[sub_resource type="Animation" id=4]
length = 12.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton2D/Bone1/Bone2/Bone3/Bone4:rotation_degrees")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 3, 8.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, -2.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skeleton2D/Bone1/Bone2/Bone3/Bone4/Bone5:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 3, 9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -6.0, 6.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skeleton2D/Bone1:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 3, 8, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, -1.0, -1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skeleton2D/Bone1/Bone2:rotation_degrees")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2, 3, 5, 8, 9, 11 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0, -1.0, -1.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Skeleton2D/Bone1/Bone2/Bone3:rotation_degrees")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 3, 9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, -2.0 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Skeleton2D/Bone1/Bone2/Bone3/Bone4:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Skeleton2D/Bone1/Bone2/Bone3/Bone4/Bone5:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Skeleton2D/Bone1:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Skeleton2D/Bone1/Bone2:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Skeleton2D/Bone1/Bone2/Bone3:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Flower" type="Node2D"]
script = ExtResource( 1 )

[node name="Leaves" type="Node2D" parent="."]
editor/display_folded = true
visible = false
script = ExtResource( 2 )

[node name="Leaf1" type="Node2D" parent="Leaves"]
editor/display_folded = true

[node name="Sprite" type="Sprite" parent="Leaves/Leaf1"]
texture = ExtResource( 3 )
offset = Vector2( 234.852, -119.218 )

[node name="HardSurface" type="StaticBody2D" parent="Leaves/Leaf1"]
editor/display_folded = true
position = Vector2( 261.824, -110.772 )

[node name="Collision" type="CollisionShape2D" parent="Leaves/Leaf1/HardSurface"]
rotation = 1.57079
shape = SubResource( 1 )

[node name="Leaf2" type="Node2D" parent="Leaves"]
editor/display_folded = true
position = Vector2( 0, -351.384 )

[node name="Sprite" type="Sprite" parent="Leaves/Leaf2"]
texture = ExtResource( 3 )
offset = Vector2( 234.852, -119.218 )

[node name="HardSurface" type="StaticBody2D" parent="Leaves/Leaf2"]
editor/display_folded = true
position = Vector2( 261.824, -110.772 )

[node name="Collision" type="CollisionShape2D" parent="Leaves/Leaf2/HardSurface"]
rotation = 1.57079
shape = SubResource( 1 )

[node name="Leaf3" type="Node2D" parent="Leaves"]
editor/display_folded = true
position = Vector2( 0, -653.965 )

[node name="Sprite" type="Sprite" parent="Leaves/Leaf3"]
texture = ExtResource( 3 )
offset = Vector2( 234.852, -119.218 )

[node name="HardSurface" type="StaticBody2D" parent="Leaves/Leaf3"]
editor/display_folded = true
position = Vector2( 261.824, -110.772 )

[node name="Collision" type="CollisionShape2D" parent="Leaves/Leaf3/HardSurface"]
rotation = 1.57079
shape = SubResource( 1 )

[node name="Leaf4" type="Node2D" parent="Leaves"]
editor/display_folded = true
position = Vector2( -6.50702, 0 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Sprite" type="Sprite" parent="Leaves/Leaf4"]
texture = ExtResource( 3 )
offset = Vector2( 234.852, -119.218 )

[node name="HardSurface" type="StaticBody2D" parent="Leaves/Leaf4"]
editor/display_folded = true
position = Vector2( 261.824, -110.772 )

[node name="Collision" type="CollisionShape2D" parent="Leaves/Leaf4/HardSurface"]
rotation = 1.57079
shape = SubResource( 1 )

[node name="Leaf5" type="Node2D" parent="Leaves"]
editor/display_folded = true
position = Vector2( -6.50702, -351.384 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Sprite" type="Sprite" parent="Leaves/Leaf5"]
texture = ExtResource( 3 )
offset = Vector2( 234.852, -119.218 )

[node name="HardSurface" type="StaticBody2D" parent="Leaves/Leaf5"]
editor/display_folded = true
position = Vector2( 261.824, -110.772 )

[node name="Collision" type="CollisionShape2D" parent="Leaves/Leaf5/HardSurface"]
rotation = 1.57079
shape = SubResource( 1 )

[node name="Leaf6" type="Node2D" parent="Leaves"]
editor/display_folded = true
position = Vector2( -6.50702, -653.965 )
rotation = 3.14159
scale = Vector2( 1, -1 )

[node name="Sprite" type="Sprite" parent="Leaves/Leaf6"]
texture = ExtResource( 3 )
offset = Vector2( 234.852, -119.218 )

[node name="HardSurface" type="StaticBody2D" parent="Leaves/Leaf6"]
editor/display_folded = true
position = Vector2( 261.824, -110.772 )

[node name="Collision" type="CollisionShape2D" parent="Leaves/Leaf6/HardSurface"]
rotation = 1.57079
shape = SubResource( 1 )

[node name="Stem" type="Polygon2D" parent="."]
offset = Vector2( -15, -900 )
texture = ExtResource( 4 )
skeleton = NodePath("../Skeleton2D")
polygon = PoolVector2Array( 25, 900, 0, 900, 0, 550, 0, 250, 0, 100, 0, 0, 25, 0, 25, 100, 25, 250, 25, 550 )
uv = PoolVector2Array( 25, 900, 0, 900, 0, 550, 0, 300, 0, 150, 0, 0, 25, 0, 25, 100, 25, 250, 25, 500 )
bones = [ NodePath("Bone1"), PoolRealArray( 1, 1, 0, 0, 0, 0, 0, 0, 0, 0 ), NodePath("Bone1/Bone2"), PoolRealArray( 0, 0, 1, 0, 0, 0, 0, 0, 0, 1 ), NodePath("Bone1/Bone2/Bone3"), PoolRealArray( 0, 0, 0, 1, 0, 0, 0, 0, 1, 0 ), NodePath("Bone1/Bone2/Bone3/Bone4"), PoolRealArray( 0, 0, 0, 0, 1, 0, 0, 1, 0, 0 ), NodePath("Bone1/Bone2/Bone3/Bone4/Bone5"), PoolRealArray( 0, 0, 0, 0, 0, 1, 1, 0, 0, 0 ) ]

[node name="Skeleton2D" type="Skeleton2D" parent="."]
editor/display_folded = true

[node name="Bone1" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Bone2" type="Bone2D" parent="Skeleton2D/Bone1"]
position = Vector2( 0, -351.384 )
rest = Transform2D( 1, 0, 0, 1, 0, -350 )

[node name="Bone3" type="Bone2D" parent="Skeleton2D/Bone1/Bone2"]
position = Vector2( 0, -302.581 )
rest = Transform2D( 1, 0, 0, 1, 0, -300 )

[node name="Bone4" type="Bone2D" parent="Skeleton2D/Bone1/Bone2/Bone3"]
position = Vector2( 0, -150 )
rest = Transform2D( 1, 0, 0, 1, 0, -150 )

[node name="Bone5" type="Bone2D" parent="Skeleton2D/Bone1/Bone2/Bone3/Bone4"]
position = Vector2( 0.185364, -94.8203 )
rest = Transform2D( 1, 0, 0, 1, 0, -100 )

[node name="Head" type="Node2D" parent="Skeleton2D/Bone1/Bone2/Bone3/Bone4/Bone5"]

[node name="BeeGleaningPosition" type="Position2D" parent="Skeleton2D/Bone1/Bone2/Bone3/Bone4/Bone5/Head"]
position = Vector2( -0.185364, -28.4775 )

[node name="Sprite" type="Sprite" parent="Skeleton2D/Bone1/Bone2/Bone3/Bone4/Bone5/Head"]
texture = ExtResource( 5 )

[node name="Area" type="Area2D" parent="Skeleton2D/Bone1/Bone2/Bone3/Bone4/Bone5/Head"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton2D/Bone1/Bone2/Bone3/Bone4/Bone5/Head/Area"]
shape = SubResource( 2 )

[node name="HardSurface" type="StaticBody2D" parent="Skeleton2D/Bone1/Bone2/Bone3/Bone4/Bone5/Head"]
editor/display_folded = true

[node name="Collision" type="CollisionShape2D" parent="Skeleton2D/Bone1/Bone2/Bone3/Bone4/Bone5/Head/HardSurface"]
position = Vector2( 0, 105.485 )
rotation = 1.57079
shape = SubResource( 3 )

[node name="RenewNectarTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "IdleMove"
anims/IdleMove = SubResource( 4 )
anims/IdleStop = SubResource( 5 )
[connection signal="body_entered" from="Skeleton2D/Bone1/Bone2/Bone3/Bone4/Bone5/Head/Area" to="." method="_on_Area_body_entered"]
[connection signal="timeout" from="RenewNectarTimer" to="." method="_on_RenewNectarTimer_timeout"]
